--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "test": "test"
   },
   "dependencies": {
+    "express": "^4.14.0",
+    "handlebars": "4.0.5",
     "jquery": "2.2.0",
     "lodash": "4.15.0",
-    "moment": "latest",
-    "handlebars": "4.0.5"
+    "moment": "latest"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "exports-loader": "^0.6.3",
     "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
     "webpack": "1.13.2"
   },
   "scripts": {
